--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
         "@mapbox/togeojson": "^0.16.0",
         "@turf/turf": "^5.1.6",
         "async": "~0.9.2",
-        "bootbox": "~5.1.3",
+        "bootbox": "~5.3.4",
         "bootstrap": "4.3.1",
         "bootstrap-select": "1.13.0",
         "bootstrap-slider": "^9.8.1",
         "codemirror": "^5.35.0",
         "d3": "~3.5.5",
-        "datatables": "~1.10.16",
+        "datatables": "~1.10.18",
         "font-awesome": "^4.7.0",
         "i18next": "^15.0.4",
         "i18next-browser-languagedetector": "^3.0.1",
         "i18next-xhr-backend": "^2.0.1",
         "jquery": "3.4.1",
         "jquery-i18next": "^1.2.1",
-        "jstree": "^3.3.7",
+        "jstree": "^3.3.8",
         "leaflet": "~1.4.0",
         "leaflet-control-geocoder": "1.8.2",
         "leaflet-easybutton": "*",
@@ -162,7 +162,7 @@
         },
         "bootbox": {
             "main": [
-                "src/bootbox.all.js"
+                "bootbox.all.js"
             ]
         },
         "bootstrap": {
